// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fnm "C:/Users/xxxxxxx/AppData/Local/fnm_multishells" detectFnmByAll 1`] = `
{
  "aliasDefaultPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/aliases/default",
  "detectedBy": [
    "env",
  ],
  "fnmDir": "C:/Users/zzzzzzz/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "fnmPathType": "node-versions",
  "installationPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Local/fnm_multishells" detectFnmByEnv 1`] = `
{
  "aliasDefaultPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/aliases/default",
  "detectedBy": "env",
  "fnmDir": "C:/Users/zzzzzzz/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "fnmPathType": "node-versions",
  "installationPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Local/fnm_multishells" detectFnmByExecPath 1`] = `
{
  "aliasDefaultPath": undefined,
  "detectedBy": "execpath",
  "isFnm": false,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Local/fnm_multishells/7064_1771483456556" detectFnmByAll 1`] = `
{
  "detectedBy": [
    "execpath",
    "env",
  ],
  "fnmPath": "C:/Users/xxxxxxx/AppData/Local/fnm_multishells/7064_1771483456556",
  "fnmPathType": "fnm_multishells",
  "isFnm": true,
  "multishellDir": "C:/Users/xxxxxxx/AppData/Local/fnm_multishells",
  "multishellKey": "7064_1771483456556",
  "multishellPath": "C:/Users/xxxxxxx/AppData/Local/fnm_multishells/7064_1771483456556",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Local/fnm_multishells/7064_1771483456556" detectFnmByEnv 1`] = `
{
  "aliasDefaultPath": undefined,
  "detectedBy": "env",
  "fnmPath": "C:/Users/yyyyyyy/AppData/Local/fnm_multishells/7064_1771483456556",
  "fnmPathType": "fnm_multishells",
  "isFnm": true,
  "multishellDir": "C:/Users/yyyyyyy/AppData/Local/fnm_multishells",
  "multishellKey": "7064_1771483456556",
  "multishellPath": "C:/Users/yyyyyyy/AppData/Local/fnm_multishells/7064_1771483456556",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Local/fnm_multishells/7064_1771483456556" detectFnmByExecPath 1`] = `
{
  "aliasDefaultPath": undefined,
  "detectedBy": "execpath",
  "fnmPath": "C:/Users/xxxxxxx/AppData/Local/fnm_multishells/7064_1771483456556",
  "fnmPathType": "fnm_multishells",
  "isFnm": true,
  "multishellDir": "C:/Users/xxxxxxx/AppData/Local/fnm_multishells",
  "multishellKey": "7064_1771483456556",
  "multishellPath": "C:/Users/xxxxxxx/AppData/Local/fnm_multishells/7064_1771483456556",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm" detectFnmByAll 1`] = `
{
  "aliasDefaultPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/aliases/default",
  "detectedBy": [
    "env",
  ],
  "fnmDir": "C:/Users/zzzzzzz/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "fnmPathType": "node-versions",
  "installationPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm" detectFnmByEnv 1`] = `
{
  "aliasDefaultPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/aliases/default",
  "detectedBy": "env",
  "fnmDir": "C:/Users/zzzzzzz/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "fnmPathType": "node-versions",
  "installationPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm" detectFnmByExecPath 1`] = `
{
  "aliasDefaultPath": undefined,
  "detectedBy": "execpath",
  "isFnm": false,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default" detectFnmByAll 1`] = `
{
  "aliasDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesName": "default",
  "aliasesPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "detectedBy": [
    "execpath",
    "env",
  ],
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "fnmPathType": "aliases",
  "installationPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default" detectFnmByEnv 1`] = `
{
  "aliasDefaultPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/default",
  "aliasesName": "default",
  "aliasesPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/default",
  "detectedBy": "env",
  "fnmDir": "C:/Users/yyyyyyy/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/default",
  "fnmPathType": "aliases",
  "installationPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default" detectFnmByExecPath 1`] = `
{
  "aliasDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesName": "default",
  "aliasesPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "detectedBy": "execpath",
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "fnmPathType": "aliases",
  "installationPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/latest" detectFnmByAll 1`] = `
{
  "aliasDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesName": "latest",
  "aliasesPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/latest",
  "detectedBy": [
    "execpath",
    "env",
  ],
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/latest",
  "fnmPathType": "aliases",
  "installationPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/latest" detectFnmByEnv 1`] = `
{
  "aliasDefaultPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/default",
  "aliasesName": "latest",
  "aliasesPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/latest",
  "detectedBy": "env",
  "fnmDir": "C:/Users/yyyyyyy/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/latest",
  "fnmPathType": "aliases",
  "installationPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/latest" detectFnmByExecPath 1`] = `
{
  "aliasDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesName": "latest",
  "aliasesPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/latest",
  "detectedBy": "execpath",
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/latest",
  "fnmPathType": "aliases",
  "installationPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/lts-latest" detectFnmByAll 1`] = `
{
  "aliasDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesName": "lts-latest",
  "aliasesPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/lts-latest",
  "detectedBy": [
    "execpath",
    "env",
  ],
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/lts-latest",
  "fnmPathType": "aliases",
  "installationPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/lts-latest" detectFnmByEnv 1`] = `
{
  "aliasDefaultPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/default",
  "aliasesName": "lts-latest",
  "aliasesPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/lts-latest",
  "detectedBy": "env",
  "fnmDir": "C:/Users/yyyyyyy/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/lts-latest",
  "fnmPathType": "aliases",
  "installationPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/lts-latest" detectFnmByExecPath 1`] = `
{
  "aliasDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesName": "lts-latest",
  "aliasesPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/lts-latest",
  "detectedBy": "execpath",
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/lts-latest",
  "fnmPathType": "aliases",
  "installationPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation" detectFnmByAll 1`] = `
{
  "aliasDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "detectedBy": [
    "execpath",
    "env",
  ],
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "fnmPathType": "node-versions",
  "installationPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation" detectFnmByEnv 1`] = `
{
  "aliasDefaultPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/default",
  "detectedBy": "env",
  "fnmDir": "C:/Users/yyyyyyy/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "fnmPathType": "node-versions",
  "installationPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation" detectFnmByExecPath 1`] = `
{
  "aliasDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "detectedBy": "execpath",
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "fnmPathType": "node-versions",
  "installationPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation",
  "isFnm": true,
  "version": "v24.13.1",
}
`;
